# StarNetwork

./: .clang-format  .editorconfig  .env  .gitignore  CMakeLists.txt  README.md  conan.profile  conanfile.txt  demo.bash  dev_server.sh  docker-compose.dev.yml  docker-compose.release.yml  docker-compose.test.yml  docker-compose.yml
.circleci/: config.yml
app/: CMakeLists.txt  main.cc  network.cc  network.h  peer.cc  peer.h
app/peer/: CMakeLists.txt  (+4 more)
auth_server/: AuthServer.cpp  AuthServer.h  CMakeLists.txt  Logger.cpp  Logger.h  Network.cpp  Network.h  main.cpp
client/: Auth.cpp  Auth.h  CMakeLists.txt  Client.cpp  Client.h  Network.cpp  Network.h  main.cpp
cmake/: HunterGate.cmake
core/: CMakeLists.txt  ExitHandler.cpp  ExitHandler.h  errors.h  hash.cpp  hash.h  initialization_exception.cpp  initialization_exception.h  logger.cpp  logger.h  os.cpp  os.h  singleton.cpp  singleton.h  string.cpp  string.h  typedefs.h
docker/: Dockerfile
docs/: convert_mov_to_gif_using_ffmpeg.txt
engine/network/: CMakeLists.txt  NetworkBase.cpp  NetworkBase.h  NetworkShared.h  SocketAddress.cpp  SocketAddress.h  SocketAddressFactory.cpp  SocketAddressFactory.h  SocketUtil.cpp  SocketUtil.h  TCPSocket.cpp  TCPSocket.h  tcp_socket.h  tcp_socket_linux.cpp  tcp_socket_unix.cpp
flatbuffers/: build.sh
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt  ExitHandler.cc  ExitHandler.cpp  ExitHandler.h  async_worker.cc  async_worker.h  encode.h  error_macros.h  errors.h  exit_handler.cc  exit_handler.h  hash.cc  hash.h  initialization_exception.cc  initialization_exception.h  logger.cc  logger.h  os.cc  os.cpp  os.h  singleton.cc  singleton.h  string.cc  string.h  typedefs.h
lib/core/io/: compression.cc  compression.h  event_poll.cc  event_poll.h  ip.cc  ip.h  ip_address.cc  ip_address.cpp  ip_address.h  socket.cc  socket.h  socket_util.cc  socket_util.h
lib/core/network/: constants.h  system.h  types.h
lib/rudp/: CMakeLists.txt  RUdpAcknowledgement.h  RUdpAddress.cpp  RUdpAddress.h  RUdpBuffer.cpp  RUdpBuffer.h  RUdpChamber.cpp  RUdpChamber.h  RUdpChannel.cpp  RUdpChannel.h  RUdpChecksum.h  RUdpCommand.cpp  RUdpCommand.h  RUdpCommandPod.cpp  RUdpCommandPod.h  RUdpCommandSize.h  RUdpCommon.cpp  RUdpCommon.h  RUdpCompress.cpp  RUdpCompress.h  RUdpCompressor.cpp  RUdpCompressor.h  RUdpConnection.cpp  RUdpConnection.h  RUdpConst.h  RUdpDispatchHub.cpp  RUdpDispatchHub.h  RUdpDispatchQueue.cpp  RUdpDispatchQueue.h  RUdpEnum.h  RUdpEvent.cpp  RUdpEvent.h  RUdpEventType.h  RUdpHost.cpp  RUdpHost.h  RUdpPacket.cpp  RUdpPacket.h  RUdpPacketFlag.h  RUdpPeer.cpp  RUdpPeer.h  (+45 more)
lib/rudp/command/: RUdpAcknowledgement.cpp  RUdpAcknowledgement.h  RUdpCommand.cpp  RUdpCommand.h  RUdpCommandPod.cpp  RUdpCommandPod.h  RUdpCommandSize.h  RUdpIncomingCommand.cpp  RUdpIncomingCommand.h  RUdpOutgoingCommand.cpp  RUdpOutgoingCommand.h  acknowledgement.cc  acknowledgement.cpp  acknowledgement.h  command.cc  command.cpp  command.h  command_pod.cc  command_pod.cpp  command_pod.h  command_size.h  incoming_command.cc  incoming_command.cpp  incoming_command.h  outgoing_command.cc  outgoing_command.cpp  outgoing_command.h
lib/rudp/dispatch/: RUdpDispatchHub.cpp  RUdpDispatchHub.h  RUdpDispatchQueue.cpp  RUdpDispatchQueue.h  dispatch_hub.cc  dispatch_hub.cpp  dispatch_hub.h  dispatch_queue.cpp  dispatch_queue.h
lib/rudp/peer/: RUdpPeer.cpp  RUdpPeer.h  RUdpPeerNet.cpp  RUdpPeerNet.h  RUdpPeerPod.cpp  RUdpPeerPod.h  peer.cc  peer.cpp  peer.h  peer_net.cc  peer_net.cpp  peer_net.h  peer_pod.cc  peer_pod.cpp  peer_pod.h
lib/rudp/protocol/: RUdpProtocol.cc  RUdpProtocol.cpp  RUdpProtocol.h  RUdpProtocolType.cc  RUdpProtocolType.h  protocol.cc  protocol.h  protocol_type.cc  protocol_type.h
lib/test/: util.h
lib/udp/: CMakeLists.txt  RUdpAcknowledgement.h  RUdpAddress.cpp  RUdpAddress.h  RUdpBuffer.h  RUdpChamber.cpp  RUdpChamber.h  RUdpChannel.cpp  RUdpChannel.h  RUdpChecksum.h  RUdpCommand.h  RUdpCommandPod.cpp  RUdpCommandPod.h  RUdpCommandSize.h  RUdpCommon.cpp  RUdpCommon.h  RUdpCompress.h  RUdpCompressor.cpp  RUdpCompressor.h  RUdpDispatchQueue.cpp  RUdpDispatchQueue.h  RUdpEventType.h  RUdpHost.cpp  RUdpPacket.h  RUdpPacketFlag.h  RUdpPeer.cpp  RUdpPeer.h  RUdpPeerNet.h  RUdpPeerPod.cpp  RUdpPeerPod.h  RUdpPeerState.h  RUdpProtocol.cpp  RudpAcknowledgement.h  RudpAddress.cpp  RudpAddress.h  RudpChecksum.h  RudpEvent.cpp  RudpEvent.h  RudpHost.cpp  RudpHost.h  (+26 more)
life/: CMakeLists.txt  MainWindow.h  main.cpp
module/: CMakeLists.txt  Network.cc  Network.cpp  Network.h  network.cc
peer/: CMakeLists.txt  Network.h  Peer.cpp
server/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  Dockerfile  build.sh  main.cc  run.sh  run_e2e_test.sh  run_unit_test.sh
test/core/io/: CMakeLists.txt  ip_address_test.cpp
test/e2e/: CMakeLists.txt
test/e2e/rudp/: BasicConnection.cpp  CMakeLists.txt  Ping.cpp
test/e2e/rudp/basic_connection/: CMakeLists.txt  main.cc  main.cpp
test/e2e/rudp/broadcast/: CMakeLists.txt  main.cc  main.cpp
test/e2e/rudp/packet_loss/: main.cpp
test/e2e/rudp/reorder_packet/: CMakeLists.txt
test/e2e/rudp/send_reliable_command/: CMakeLists.txt  main.cpp
test/feature/: CMakeLists.txt  main.cc
test/feature/rudp/: basic_connection.cc  broadcast.cc  broadcast_test.cc  connection_test.cc  payload.h  reliable_command.cc  reliable_command_1.cc  reliable_command_2.cc  var.h  window_control_1.cc
test/lib/rudp/: BasicConnection.cpp  CMakeLists.txt  Ping.cpp  RUdpHostTests.cpp  host_test.cpp
test/lib/udp/: host_test.cpp
test/macos/unit/core/io/: CMakeLists.txt
test/module/: CMakeLists.txt  NetworkTests.cpp
test/module/networking/: CMakeLists.txt  TransporterTests.cpp  transporter_test.cpp
test/unit/: CMakeLists.txt
test/unit/app/: network_test.cc
test/unit/core/io/: CMakeLists.txt  ip_address_test.cc
test/unit/lib/rudp/: rebuffering_test.cc  window_control_test.cc
test/unit/lib/rudp/command/: CMakeLists.txt  RUdpCommandPodTest.cc  RUdpCommandPodTest.cpp  command_pod_test.cc
test/unit/module/: CMakeLists.txt  NetworkTests.cpp  network_test.cc
test/unit/rudp/: command.cpp
(+101 files in other folders)
